Changes with Apache 1.3.20

Changes with Apache 1.3.19

  *) Rewrite ap_unparse_uri_components() to make it safer and more readable
     ["Jeffrey W. Baker" <jwbaker@acm.org>]

  *) Under certain circumstances, Apache did not supply the
     right response headers when requiring authentication.
     [Gertjan van Wingerde <Gertjan.van.Wingerde@cmg.nl>] PR#7114

  *) Clean up some end-of-loop not reached warnings [Jim Jagielski,
     Aris Stathakis <aris@sco.COM>]

  *) Add the correct language tag for interoperation with the Taiwanese
     versions of MSIE and Netscape. [Clive Lin <clive@CirX.ORG>] PR#7142

  *) Fixed system shutdown on Windows 2000 to assure that the modules have
     an opportunity to clean up.  Note there is a _very_ limited amount of
     time in which to execute all cleanups [see MSKB Q146092] so all of
     the modules may still not be given an opportunity to complete their
     cleanups if they require more than 20 seconds total.  [William Rowe]

Changes with Apache 1.3.18 [not released]

  *) Workaround enabled for a core dump which appeared in broken
     NameVirtualHost configurations. [Martin Kraemer]

  *) Sporadic core dump in ap_default_port_for_scheme() with
     internal requests fixed by [Jeffrey W. Baker <jwbaker@acm.org>]

  *) PORT: Allow for build under latest dev. version of NonStopUX
     on Compaq. [Tom Bates <tom.bates@compaq.com>]

  *) mod_user on Win32 bug introduced in 1.3.17 is corrected.  The parsing
     is completely rewritten so all platforms share the same file/redirect
     logic interpreting UserDir directives.  Specifying a Win32 or Netware
     relative path or a relative path on any platform using an '*' now
     emits an error when httpd.conf is first parsed.  [William Rowe]

  *) Apache/Win32 no longer holds open the console on error, unless invoked
     by a shortcut with the new -w option.  [William Rowe]

  *) The Win32 -t test config now holds the console open on "SYNTAX OK".
     [William Rowe]
