@@ -1,5 +1,9 @@
 Changes with Apache 1.3.20
 
+  *) Introduce NUL device pipes for stdin and stdout for the parent Win32
+     service process.  This solves bugs such as PR7198 that report 
+     "dup2(stdin) failed" when trying to use piped logs.  [William Rowe]
+
 Changes with Apache 1.3.19
 
   *) Rewrite ap_unparse_uri_components() to make it safer and more readable
